...
                                                        <rect key="frame" x="123" y="0.0" width="73" height="32"/>
                                                        <segments>
                                                            <segment title="on"/>
                                                            <segment title="off"/>
                                                        </segments>
                                                        <userDefinedRuntimeAttributes>
...
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple Pay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUD-zb-m0d">
                                                        <rect key="frame" x="0.0" y="0.0" width="76" height="31"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                        </segments>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="apple_pay_selector"/>
                                                        </userDefinedRuntimeAttributes>
                                                    </segmentedControl>
...
                                                        </accessibility>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                        <state key="normal" title="Add"/>
                                                    </button>
                                                </subviews>
...
                                                <rect key="frame" x="0.0" y="138" width="750" height="50"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Payment method" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFont
                                                        <rect key="frame" x="0.0" y="0.0" width="102.5" height="50"/>
                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
...
                                        <rect key="frame" x="0.0" y="12" width="222" height="0.0"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="PaymentSheet (Custom)"/>
                                        <connections>
                                            <segue destination="My4-RU-qnC" kind="show" id="Xdz-OC-9o9"/>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="jAV-Cf-o6R" userLabel="PaymentSheet (SwiftUI)">
                                        <rect key="frame" x="0.0" y="66" width="222" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <rect key="frame" x="0.0" y="108" width="222" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="PaymentSheet (SwiftUI Custom)"/>
                                        <connections>
                                            <segue destination="AjW-Xm-4P3" kind="show" destinationCreationSelector="showSwiftUICustomExample:" id="dAe-GM-ken"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <state key="normal" title="Buy">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
