"%1$@ ×%2$d" = "%1$@ ×%2$li";

"%@ will no longer be saved to your wallet." = "%@ will no longer be saved to your wallet.";

"+ Add" = "+ Add";

"1 %1$@ = %2$@ %3$@ (includes %4$@%% conversion fee)." = "1 %1$@ = %2$@ %3$@ (includes %4$@%% conversion fee).";

"1 %@ = %@ %@" = "1 %1$@ = %2$@ %3$@";

"Accept" = "Accept";
...
"Close card scanner" = "Close card scanner";

"Code sent" = "Code sent";

"Complete the payment using Pix to finish the purchase." = "Complete the payment using Pix to finish the purchase.";

"Confirm" = "Confirm";

"Confirm payment details" = "Confirm payment details";

"Confirm the Bizum payment in your mobile banking application within %@ to complete the purchase." = "Confirm the Bizum payment in your mobile banking application within %@ to complete the purchase.";

"Confirm the payment in your MB WAY app within %@ to complete the purchase." = "Confirm the payment in your MB WAY app within %@ to complete the purchase.";
...
