...
                style: .remove,
                dangerColor: appearance.colors.danger
            )
            button.backgroundColor = appearance.colors.danger
            button.isAccessibilityElement = true
            button.accessibilityLabel = String.Localized.remove
            button.accessibilityIdentifier = "Remove"
            return button
        }()

        fileprivate var viewModel: SavedPaymentOptionsViewController.Selection? = nil

        var isRemovingPaymentMethods: Bool = false {
...
                    )
                    paymentMethodLogo.tintColor = UIColor.linkNavLogo.resolvedContrastingColor(
                        forBackgroundColor: appearance.colors.componentBackground
                    )
                case .add:
                    label.text = STPLocalizedString(
                        "+ Add",
                        "Text for a button that, when tapped, displays another screen where the customer can add payment method details"
                    )
                    shadowRoundedRectangle.accessibilityLabel =
                        String.Localized.add_new_payment_method
                    shadowRoundedRectangle.accessibilityIdentifier = "+ Add"
                    paymentMethodLogo.isHidden = true
...
